[project]
name = "md-fuse"
version = "0.1.0"
description = "Utilitário para criar arquivos de backups através de um arquivo de configuração"
authors = [
    { name = "Caio Campos", email = "20524962+caiocampos@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"fuse" = "fuse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fuse"]
