[project]
name = "md-fuse"
version = "0.1.0"
description = "Utilitário para criar arquivos de backups através de um arquivo de configuração"
authors = [
    { name = "Caio Campos", email = "20524962+caiocampos@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = []

[project.scripts]
"fuse" = "fuse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuse"]
